--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "devDependencies": {
     "axios": "^0.15.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "bulma": "^0.4.3",
     "cross-env": "^3.2.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "vue-events": "^3.0.1",
+    "vuetable-2": "^1.6.5"
   },
   "optionalDependencies": {}
 }
